--- a/website/index.html
+++ b/website/index.html
@@ -408,7 +408,7 @@
         // Slarmoo's Box plants
         "✨","🌈","🌧️","🪨","🐍","🌲","🌳","𓆏","🦀",
         //Current version
-        "1.4"
+        "1.4.1"
         ];
         const date = new Date();
         if (Math.floor(Math.random() * 3) == 0) { //more than doubled chance for a plant to show up
@@ -470,7 +470,7 @@
             if ((date.getDate() == 1) && date.getMonth() == 3) {
                 //
             } else {
-                fileref.setAttribute("src", "beepbox_editor.min.js");
+                fileref.setAttribute("src", "beepbox_editor.js");
             }
             document.head.appendChild(fileref);
         } else {
