--- a/website/index.html
+++ b/website/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -470,7 +471,7 @@
             if ((date.getDate() == 1) && date.getMonth() == 3) {
                 //
             } else {
-                fileref.setAttribute("src", "beepbox_editor.js");
+                fileref.setAttribute("src", "beepbox_editor.min.js");
             }
             document.head.appendChild(fileref);
         } else {
